--- a/package.json
+++ b/package.json
@@ -13,11 +13,22 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.17",
+    "expo-camera": "~15.0.12",
+    "expo-dev-client": "~4.0.19",
+    "expo-media-library": "~16.0.4",
+    "expo-sharing": "~12.0.1",
+    "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-calendars": "^1.1305.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-google-mobile-ads": "^13.6.0",
-    "expo-sqlite": "~14.0.4"
+    "react-native-phone-call": "^1.2.0",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.32.0",
+    "react-native-wheel-scrollview-picker": "^2.0.4",
+    "expo-notifications": "~0.28.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
