--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
     "react-native-wheel-scrollview-picker": "^2.0.4",
-    "expo-notifications": "~0.28.9"
+    "expo-notifications": "~0.28.9",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
